syntax = "proto3";
package protocol;

option go_package = "github.com/zllovesuki/G14Manager/rpc/protocol";

import "google/protobuf/empty.proto";

service KeyboardBrightness {
  rpc GetCurrentBrightness(google.protobuf.Empty)
      returns (KeyboardBrightnessResponse) {}
  rpc SetBrightness(SetKeyboardBrightnessRequest)
      returns (KeyboardBrightnessResponse) {}
  rpc AdjustBrightness(AdjustKeyboardBrightnessRequest)
      returns (KeyboardBrightnessResponse) {}
}

enum Level {
  OFF = 0;
  LOW = 1;
  MEDIUM = 2;
  HIGH = 3;
}

message AdjustKeyboardBrightnessRequest {
  enum Step {
    INCREMENT = 0;
    DECREMENT = 1;
  }

  Step Direction = 1;
}

message SetKeyboardBrightnessRequest { Level Brightness = 1; }

message KeyboardBrightnessResponse {
  bool Success = 1;
  Level Brightness = 2;

  string Message = 10;
}